--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -1062,6 +1062,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y2u-dd-Iee" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Building Data View Controller-->
+        <scene sceneID="vtX-mD-Kr8">
+            <objects>
+                <viewController storyboardIdentifier="buildingDataViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="DUu-Zg-lZH" customClass="buildingDataViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CnV-fF-4FO"/>
+                        <viewControllerLayoutGuide type="bottom" id="Vnn-YW-uR7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HB4-rh-yoH">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AUX-Y6-2ea" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
     <resources>
         <image name="grfx_closeBtn.png" width="25" height="25"/>
