Added setting table view

--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -449,6 +449,9 @@
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                             <rect key="frame" x="129" y="681" width="46" height="46"/>
                                         </variation>
+                                        <connections>
+                                            <action selector="loadSetting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GTd-Rc-gaa"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qIg-Od-4Yx" userLabel="Webcam">
                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
