--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
             <string>GoodPro-Book</string>
             <string>GoodPro-Book</string>
             <string>GoodPro-Book</string>
+            <string>GoodPro-Book</string>
+            <string>GoodPro-Book</string>
+            <string>GoodPro-Book</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -695,7 +698,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="137" height="130"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7yu-iT-pPW">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7yu-iT-pPW" userLabel="thumb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                    <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
+                                                        <rect key="frame" x="0.0" y="0.0" width="137" height="103"/>
+                                                    </variation>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ejl-6w-LoX" userLabel="frame">
                                                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                     <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
                                                         <rect key="frame" x="0.0" y="0.0" width="137" height="103"/>
@@ -717,17 +726,20 @@
                                         <variation key="default">
                                             <mask key="subviews">
                                                 <exclude reference="7yu-iT-pPW"/>
+                                                <exclude reference="Ejl-6w-LoX"/>
                                                 <exclude reference="bhg-zw-OeN"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=regular">
                                             <mask key="subviews">
                                                 <include reference="7yu-iT-pPW"/>
+                                                <include reference="Ejl-6w-LoX"/>
                                                 <include reference="bhg-zw-OeN"/>
                                             </mask>
                                         </variation>
                                         <connections>
                                             <outlet property="cellThumb" destination="7yu-iT-pPW" id="6Lv-dH-Xin"/>
+                                            <outlet property="imgFrame" destination="Ejl-6w-LoX" id="lCG-Ds-glh"/>
                                             <outlet property="titleLabel" destination="bhg-zw-OeN" id="AZp-wo-TqI"/>
                                         </connections>
                                     </collectionViewCell>
@@ -770,28 +782,28 @@
                                 <subviews>
                                     <button opaque="NO" tag="110" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-fL-O8K">
                                         <rect key="frame" x="709" y="713" width="66" height="33"/>
-                                        <state key="normal" backgroundImage="share_but_pdf.png">
+                                        <state key="normal" image="grfx_sharePDF.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="highlighted" backgroundImage="share_but_pdf_roll.png"/>
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                            <rect key="frame" x="697" y="53" width="66" height="33"/>
+                                            <rect key="frame" x="697" y="16" width="66" height="39"/>
                                         </variation>
                                         <connections>
                                             <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="eVh-U8-FqI"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" tag="111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rio-YF-3np">
+                                    <button opaque="NO" tag="111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rio-YF-3np">
                                         <rect key="frame" x="801" y="713" width="66" height="32"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" backgroundImage="share_but_email.png">
+                                        <state key="normal" image="grfx_shareEmail.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="highlighted" backgroundImage="share_but_email_roll.png"/>
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                            <rect key="frame" x="789" y="53" width="66" height="32"/>
+                                            <rect key="frame" x="789" y="20" width="66" height="34"/>
                                         </variation>
                                         <connections>
                                             <action selector="finishedSelectingItemsForEmail:" destination="CeG-kc-ZJW" eventType="touchUpInside" id="RAU-ZQ-h28"/>
@@ -799,13 +811,13 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G76-Dd-JV9">
                                         <rect key="frame" x="880" y="718" width="128" height="21"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="12"/>
+                                        <fontDescription key="fontDescription" name="GoodPro-Book" family="GoodPro" pointSize="14"/>
                                         <state key="normal" title="Send Blank Email">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                            <rect key="frame" x="868" y="58" width="128" height="21"/>
+                                            <rect key="frame" x="868" y="36" width="128" height="21"/>
                                         </variation>
                                         <connections>
                                             <action selector="sendBlankEmail" destination="CeG-kc-ZJW" eventType="touchUpInside" id="efW-Za-HZa"/>
@@ -813,24 +825,24 @@
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10MBs" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJm-Df-bBb">
                                         <rect key="frame" x="327" y="708" width="123" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="GoodPro-Book" family="GoodPro" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                            <rect key="frame" x="315" y="48" width="123" height="21"/>
+                                            <rect key="frame" x="327" y="20" width="123" height="21"/>
                                         </variation>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zms-Jx-ytQ">
                                         <rect key="frame" x="20" y="708" width="143" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="GoodPro-Book" family="GoodPro" pointSize="16"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                            <rect key="frame" x="8" y="48" width="143" height="21"/>
+                                            <rect key="frame" x="20" y="20" width="143" height="21"/>
                                         </variation>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.84705882352941175" green="0.16470588235294117" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="fKE-fL-O8K"/>
@@ -841,7 +853,7 @@
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="662" width="1024" height="106"/>
+                                    <rect key="frame" x="0.0" y="690" width="1024" height="78"/>
                                     <mask key="subviews">
                                         <include reference="fKE-fL-O8K"/>
                                         <include reference="rio-YF-3np"/>
@@ -1088,9 +1100,9 @@
         <image name="grfx_menuRestart.jpg" width="23" height="14"/>
         <image name="grfx_menuSettings.jpg" width="24" height="21"/>
         <image name="grfx_menuWebcam.jpg" width="18" height="11"/>
-        <image name="share_but_email.png" width="66" height="33"/>
+        <image name="grfx_shareEmail.png" width="29" height="34"/>
+        <image name="grfx_sharePDF.png" width="23" height="39"/>
         <image name="share_but_email_roll.png" width="149" height="762"/>
-        <image name="share_but_pdf.png" width="66" height="33"/>
         <image name="share_but_pdf_roll.png" width="33" height="33"/>
     </resources>
 </document>
