--- a/beattyFrame/utilities/EMBSPCell.xib
+++ b/beattyFrame/utilities/EMBSPCell.xib
@@ -214,20 +214,20 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="17.IBViewMetadataConstraints"/>
+				<reference key="17.IBViewMetadataConstraints" ref="0"/>
 				<string key="3.CustomClassName">EMBSPCell</string>
 				<reference key="3.IBNSViewMetadataGestureRecognizers" ref="0"/>
 				<string key="3.IBPersistedLastKnownCanvasPosition">{470.5, 328.5}</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="3.IBViewMetadataConstraints"/>
+				<reference key="3.IBViewMetadataConstraints" ref="0"/>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="4.IBViewMetadataConstraints"/>
+				<reference key="4.IBViewMetadataConstraints" ref="0"/>
 				<reference key="47.IBNSViewMetadataGestureRecognizers" ref="0"/>
 				<string key="47.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="47.IBViewMetadataConstraints"/>
+				<reference key="47.IBViewMetadataConstraints" ref="0"/>
 				<reference key="482.IBNSViewMetadataGestureRecognizers" ref="0"/>
 				<string key="482.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<array key="482.IBViewMetadataConstraints"/>
+				<reference key="482.IBViewMetadataConstraints" ref="0"/>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
